Modificando la funcionalidad del super admin de traer a todos los usuarios registrados

--- a/views/superAdministrador/registro.css
+++ b/views/superAdministrador/registro.css
@@ -161,3 +161,9 @@ label[for="input-file"]:hover {
 .sexo input[type="radio"] {
     display: none;
 }
+
+.error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+}
