--- a/views/cliente/chat.css
+++ b/views/cliente/chat.css
@@ -7,7 +7,7 @@
 }
 
 /* Estilo para la lista de chats (aside) */
-#chats_container {
+#chats_container_aside {
     width: 350px;
     background-color: #444;
     border-radius: 10px;
@@ -120,7 +120,7 @@
 }
 
 /* Estilo para la conversación (section) */
-#chat_container {
+#chat_container_section {
     flex: 1;
     background-color: white;
     border-radius: 10px;
@@ -231,8 +231,8 @@
     position: relative;
 }
 
-.offer-content .button-disapprove,
-.offer-content .button-approve {
+.offer-content .button-disapprove-offer,
+.offer-content .button-approve-offer {
     padding: 10px 14px;
     border: none;
     border-radius: 6px;
@@ -243,20 +243,20 @@
     color: white;
 }
 
-.offer-content .button-approve {
+.offer-content .button-approve-offer {
     background-color: #4CAF50;
 }
 
-.offer-content .button-approve:hover {
+.offer-content .button-approve-offer:hover {
     background-color: #45a049;
 }
 
 
-.offer-content .button-disapprove {
+.offer-content .button-disapprove-offer {
     background-color: #f44336;
 }
 
-.offer-content .button-disapprove:hover{
+.offer-content .button-disapprove-offer:hover{
     background-color: #d7372c;
 }
 
@@ -305,17 +305,32 @@
     color: #333;
 }
 
+#chat_actual_section {
+    flex: 1;
+    background-color: #333;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+
 /* Responsive */
 @media (max-width: 768px) {
     .chat-layout {
         flex-direction: column;
     }
     
-    #chats_container {
+    #chats_container_aside {
         width: 100%;
         height: 300px;
         margin-right: 0;
         margin-bottom: 10px;
     }
     
+    #chat_actual_section {
+        height: calc(100vh - 400px);
+    }
 }
