--- a/views/vendedor/chat.css
+++ b/views/vendedor/chat.css
@@ -7,7 +7,7 @@
 }
 
 /* Estilo para la lista de chats (aside) */
-#chats_container {
+#chats_container_aside {
     width: 350px;
     background-color: #444;
     border-radius: 10px;
@@ -232,7 +232,7 @@
     position: relative;
 }
 
-.offer-content .button-cancel{
+.offer-content .button-cancel-offer{
     padding: 10px 14px;
     border: none;
     border-radius: 6px;
@@ -244,7 +244,7 @@
     color: white;
 }
 
-.offer-content .button-cancel:hover{
+.offer-content .button-cancel-offer:hover{
     background-color: #d7372c;
 }
 
@@ -401,7 +401,16 @@
     display: none;
 }
 
-
+#chat_actual_section {
+    flex: 1;
+    background-color: #333;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 
 /* Responsive */
 @media (max-width: 768px) {
@@ -410,11 +419,15 @@
         margin-top: 25px;
     }
     
-    #chats_container {
+    #chats_container_aside {
         width: 100%;
         height: 300px;
         margin-right: 0;
         margin-bottom: 10px;
+    }
+    
+    #chat_actual_section {
+        height: calc(100vh - 400px);
     }
     
 }
