Agregando la funcionalidad de social para ambos perfiles (vendedor y comprador)

--- a/views/style.css
+++ b/views/style.css
@@ -10,7 +10,13 @@
 body {
     background-color: #f3f3f3;
     padding: 20px;
-}
+} 
+
+/* body {
+    background-color: #1e1e1e; Fondo oscuro general
+    color: #f0f0f0;
+    padding: 20px;
+} */
 
 .logo-link {
     text-decoration: none; /* Quita el subrayado */
