Reviertiendo que los administradores puedan rechazar o aceptar una oferta (solo lo hacen una vez y ya una u otra)

--- a/views/administrador/main.css
+++ b/views/administrador/main.css
@@ -118,6 +118,10 @@
     pointer-events: none;
 }
 
+.card-container .no-products-message{
+    color: whitesmoke;
+}
+
 /* Responsividad */
 @media (max-width: 768px) {
     .main-content {
