PIA para entregar el 20 de mayo del 2025

--- a/views/cliente/perfil.css
+++ b/views/cliente/perfil.css
@@ -26,6 +26,11 @@
     outline: none;
 }
 
+.infoGeneral .formPerfil .label{
+    color: whitesmoke;
+}
+
+
 /* Imagen de perfil */
 .ImageLoaded {
     display: block;
